// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attach() attach("") throws error 1`] = `
"The provided selector is invalid.
Expects a CSS selector, a Node element, a NodeList, an HTMLCollection or an array.
See: https://github.com/francoischalifour/medium-zoom"
`;

exports[`close() mediumZoom(Node).close() renders correctly 1`] = `
<body>
  <img
    class="medium-zoom-image"
  />
</body>
`;

exports[`close() mediumZoom(String).close() renders correctly 1`] = `
<body>
  <img
    class="medium-zoom-image"
  />
  <img
    class="medium-zoom-image"
  />
</body>
`;

exports[`mediumZoom() mediumZoom(selector) selector mediumZoom("") throws 1`] = `
"The provided selector is invalid.
Expects a CSS selector, a Node element, a NodeList, an HTMLCollection or an array.
See: https://github.com/francoischalifour/medium-zoom"
`;

exports[`open() mediumZoom({ background }).open() renders correctly 1`] = `
<body
  class="medium-zoom--open"
>
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(186, 218, 85);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`open() mediumZoom({ template: Node }).open() renders correctly 1`] = `
<body
  class="medium-zoom--open"
>
  <template />
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <div />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`open() mediumZoom({ template: string }).open() renders correctly 1`] = `
<body
  class="medium-zoom--open"
>
  <template />
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <div />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`open() open() renders correctly 1`] = `
<body
  class="medium-zoom--open"
>
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <img
    class="medium-zoom-image"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`open() open() with \`data-zoom-target\` renders correctly 1`] = `
<body>
  <img
    class="medium-zoom-image"
    data-zoom-target="../fixtures/image-2.jpg"
    src="../fixtures/image-1.jpg"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    data-zoom-target="../fixtures/image-2.jpg"
    src="../fixtures/image-1.jpg"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`open() open() with \`srcset\` renders correctly 1`] = `
<body
  class="medium-zoom--open"
>
  <img
    class="medium-zoom-image"
    src="image.jpg"
    srcset="image-300x200.jpg 300w, image-600x400.jpg 600w, image-800x500.jpg 800w, image-1000x650.jpg 1000w, image-1200x800.jpg 1200w"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    src="image.jpg"
    srcset="image-300x200.jpg 300w, image-600x400.jpg 600w, image-800x500.jpg 800w, image-1000x650.jpg 1000w, image-1200x800.jpg 1200w"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`open() open().open() does not open twice 1`] = `
<body
  class="medium-zoom--open"
>
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="visibility: hidden; position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;

exports[`toggle() toggle() renders correctly 1`] = `
<body>
  <img
    class="medium-zoom-image"
    style="visibility: hidden;"
  />
  <div
    class="medium-zoom-overlay"
    style="background-color: rgb(255, 255, 255);"
  />
  <img
    class="medium-zoom-image medium-zoom-image--open"
    style="position: absolute; top: 0px; left: 0px; width: 0px; height: 0px;"
  />
</body>
`;
